[BB-11]: Fixed build issue