@@ -17,6 +17,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.InputStream;
 import java.io.Serializable;
+import java.util.Collections;
 import java.util.Map;
 
 import static io.blackbird.aemconnector.core.utils.TestUtils.inputStreamToString;
@@ -60,7 +61,7 @@ public class DitaExporterServletTest {
         String contentPath = "/content/dam/dita/en/test.dita";
         Serializable exported = "<xml>test</xml>";
 
-        request.setParameterMap(Map.of("contentPath", contentPath));
+        request.setParameterMap(Collections.singletonMap("contentPath", new String[]{contentPath}));
 
         ContentType contentType = mock(ContentType.class);
         when(contentTypeService.resolveContentType(contentPath)).thenReturn(contentType);
@@ -75,7 +76,7 @@ public class DitaExporterServletTest {
 
     @Test
     void shouldThrowBlackbirdHttpErrorExceptionWhenContentPathIsMissing() {
-        request.setParameterMap(Map.of());
+        request.setParameterMap(Collections.emptyMap());
 
         BlackbirdHttpErrorException ex = assertThrows(BlackbirdHttpErrorException.class,
                 () -> servlet.buildResponsePayload(request, response)
@@ -89,7 +90,7 @@ public class DitaExporterServletTest {
     void shouldThrowBlackbirdHttpErrorExceptionWhenResourceNotFound() {
         String contentPath = "/content/dam/missing.dita";
 
-        request.setParameterMap(Map.of("contentPath", contentPath));
+        request.setParameterMap(Collections.singletonMap("contentPath", new String[]{contentPath}));
 
         when(contentTypeService.resolveContentType(contentPath)).thenReturn(mock(ContentType.class));
         when(contentExportService.exportContent(eq(contentPath), any(), anyMap())).thenThrow(new BlackbirdServiceException(
@@ -105,10 +106,10 @@ public class DitaExporterServletTest {
     }
 
     @Test
-    void shouldThrowexceptionWhenBlackbirdServiceExceptionOccurs() {
+    void shouldThrowBlackbirdHttpErrorExceptionWhenBlackbirdServiceExceptionOccurs() {
         String contentPath = "/content/dam/dita/en/test.dita";
 
-        request.setParameterMap(Map.of("contentPath", contentPath));
+        request.setParameterMap(Collections.singletonMap("contentPath", new String[]{contentPath}));
         when(contentTypeService.resolveContentType(contentPath)).thenReturn(mock(ContentType.class));
         when(contentExportService.exportContent(eq(contentPath), any(), anyMap()))
                 .thenThrow(new BlackbirdServiceException("BlackbirdServiceException occurs"));
@@ -126,7 +127,7 @@ public class DitaExporterServletTest {
         String contentPath = "/content/dam/dita/en/test.dita";
         Serializable exported = "<xml>test</xml>";
 
-        request.setParameterMap(Map.of("contentPath", contentPath));
+        request.setParameterMap(Collections.singletonMap("contentPath", new String[]{contentPath}));
 
         ContentType contentType = mock(ContentType.class);
         when(contentTypeService.resolveContentType(contentPath)).thenReturn(contentType);
